--- a/Recruto/RecrutoWeb/templates/index.html
+++ b/Recruto/RecrutoWeb/templates/index.html
@@ -14,8 +14,24 @@
 
             <div class="row mt-5">
 
-                <div class="col-auto mx-auto">
+                <div class="col-auto mx-auto text-center">
                     <span class="bg-success rounded-4 py-2 px-5 text-light">Hello {{name}} {{message}}</span>
+                </div>
+
+            </div>
+
+            <div class="row mt-5">
+                <div class="col-auto mx-auto">
+                    <div class="bg-primary rounded-4 pb-2 px-5 text-light text-center">
+                        <p class="my-0 pt-2 pb-1">Вы можете задасть свои параметры для name и message.</p>
+                        <p class="my-0 pt-1 pb-2">Для этого добавьте к корню ссылки /?name=sometext&message=sometext</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-3">
+                <div class="col-auto mx-auto text-center">
+                    <span class="bg-primary rounded-4 py-2 px-5 text-light">Исходник проекта на моём githab: <a class="text-danger" href="https://github.com/Bot304/Recruto/tree/main/Recruto">ссылка</a></span>
                 </div>
 
             </div>
